# she_ini_parse

./: CMakeLists.txt  README.md
cmake/: compilation_options.cmake  config.cmake  import.cmake  she_ini_parse-config.cmake  src_build.cmake  z_install.cmake
docs/: escape.md  finite_automaton_model.md
example/: CMakeLists.txt  main.cpp  parse_test.ini
exec/: application.cpp
resource/: lexer_test.ini  placeholder.ini
resource/she_ini/: CMakeLists.txt  IniTestFile.ini  README.md
resource/she_ini/example/: CMakeLists.txt  README.md  config.ini  example.cpp
resource/she_ini/src/: DealIni.cpp  DealIni.h  FSM.cpp  FSM.h  FSMState.h  IniState.h  IniStructure.cpp  IniStructure.h
resource/she_ini/test/: magic_enum.hpp  main.cpp  method_1.h  method_2.h  method_3_FSM_test.h  method_4_for_every_char.h  method_5_magic_enum_test.h  method_6_IniStructure_test.h
scripts/: googletest-1.12.1_build.sh
src/: entity.cpp  entity.h  ini_parse.cpp  ini_parse.h  ini_type.h  lexer.cpp  lexer.h  lexer_DFA_model.cpp  lexer_DFA_model.h  parse.cpp  parse.h  placeholder.cpp  placeholder.h  provide_hash.h  scan.cpp  scan.h
test/: global_test_set.h  main.cpp  test_example.h
test/test_suite/: ini_parse__test.h  lexer_DFA_model__test.h  lexer__test.h  parse__test.h  scan__test.h
